[metadata]
name = pynamicui
version = 0.0.3
description = dynamic web-like UIs using a declarative syntax
long_description = PynamicUI is a lightweight Python library that provides a dynamic user interface (UI) framework for creating interactive and responsive applications. It simplifies the process of building user interfaces by abstracting away the complexities of working directly with a UI toolkit like Tkinter.
long_description_content_type = text/markdown
url = https://github.com/zacharie410/PynamicUI
author = zacharie410
license = Apache Software License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[project.urls]
homepage = https://github.com/zacharie410/PynamicUI
documentation = https://github.com/zacharie410/PynamicUI
repository = https://github.com/zacharie410/PynamicUI

[options]
python_requires = >=3.7
packages =
    pynamicui
    pynamicui.createDom
    pynamicui.createElement
    pynamicui.createStylesheet
install_requires =
    customtkinter
include_package_data = True